--- a/index.html
+++ b/index.html
@@ -5,28 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostrar binario</title>
     <style>
-
+        body {
+            background-color: rgb(0, 12, 185);
+        }
+        
+        .cuadro {
+            width: 80%;
+            margin: 0 auto;
+            background-color: rgb(255, 255, 255);
+            padding: 20px;
+            border: 1px solid rgb(0, 0, 0);
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+        
+        .cuadro input[type="text"] {
+            margin-left: 0;
+        }
     </style>
 </head>
-<body style="background-color: rgb(0, 12, 185);">
-    <h1 style="text-align: center; color: rgb(255, 255, 255) ;">CONVERSION ASCCI</h1>
-    <br><br>
-    <br><br>
-    <h3 style="text-align: center; color: rgb(255, 255, 255) ;">Ingrese un caracter</h3>
-    <input type="text" id="binario" style="margin-left: 240px;">
-    <input id="mostrar-binario" type="submit" onclick="mostrarBinario()" value="Mostrar">
-    <p id="bin">
-    <br><br>
-    <br><br>
-    </p>
-    <h3 style="text-align: center; color: rgb(255, 255, 255) ;">Ingrese un numero binario</h3>
-    <input type="text" id="binario2" style="margin-left: 240px;">
-    <input id="mostrarbinario2" type="submit" onclick="mostrarBinario2()" value="Mostrar">
-    <p id="bin2">
-
-    </p>
-
-
+<body>
+    <div class="cuadro">
+        <h1 style="color: rgb(0, 0, 255);">CONVERSION ASCCI</h1>
+        <br><br>
+        <h3>Ingrese un caracter</h3>
+        <input type="text" id="binario">
+        <input id="mostrar-binario" type="submit" onclick="mostrarBinario()" value="Mostrar">
+        <p id="bin"></p>
+        <br><br>
+        <h3>Ingrese un numero binario</h3>
+        <input type="text" id="binario2">
+        <input id="mostrarbinario2" type="submit" onclick="mostrarBinario2()" value="Mostrar">
+        <p id="bin2"></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
